Adapt the code to 7.x requirements